# s3-active-storage-prototype

./: .gitignore  README.md  dockerfile  setup.cfg
active_storage/: app.py  models.py
active_storage/client/: boto3.py
active_storage/server/: app.py  config.py  models.py
deployment/: ansible-inventory.yml  ansible-playbook.yml  inventory.yml  playbook.yml
scripts/: minio-run  upload_sample_data.py
testdata/: gen.c
