[metadata]
name = s3-active-storage
description = Active storage implementation for S3 backends.
long_description = file: README.md
author = Matt Pryor
author_email = matt@stackhpc.com
url = https://github.com/stackhpc/s3-active-storage


[options]
zip_safe = False
include_package_data = True
packages = find:
install_requires =
    configomatic
    fastapi
    httpx
    numpy
    pydantic
